2005-07-01  Not Zed  <NotZed@Ximian.com>

	* POTFILES.in: move import.glade to shell/ and remove
	intelligent.c

2005-06-27  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* es.po: Updated Spanish translation.

2005-06-27  Sarfraaz Ahmed <asarfraaz@novell.com>

	* POTFILES.in : Added the new exchange plugin files.
	* POTFILES.skip : Updated the old files here.

2005-06-26  Ilkka Tuohela <hile@iki.fi>

	* fi.po: Updated Finnish translation.

2005-06-22  Abel Cheung  <maddog@linuxhall.org>

	* zh_TW.po: Fix language team reference.

2005-06-23  Adam Weinberger  <adamw@gnome.org>

	* en_CA.po: Updated Canadian English translation.

2005-06-22  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* es.po: Updated Spanish translation.

2005-06-22  Funda Wang  <fundawang@linux.net.cn>

	* zh_CN.po: Updated Simplified Chinese translation.

2005-06-21  Not Zed  <NotZed@Ximian.com>

	* en_AU.po, is.po, he.po, wa.po: Fix breaks from last commit.

	* POTFILES.in: added all the new gal widgets & a couple of other
	missing files.  re-sorted properly (it wasn't).  *.po: merged in
	gal strings and updated (many strings no longer exist).

2005-06-19  Guilherme de S. Pastore  <gpastore@cvs.gnome.org>

	* pt_BR.po: Fixed tiny problem in Brazilian Portuguese
	translation, only noticeable through usage (context).

2005-06-18  Rhys Jones  <rhys@sucs.org>

	* cy.po: Partially updated Welsh translation.

2005-06-17  Marcel Telka  <marcel@telka.sk>

	* sk.po: Updated Slovak translation.

2005-06-17  Alexander Shopov  <ash@contact.bg>

	* bg.po: Updated Bulgarian translation by
	Vladimir Petkov <vpetkov@i-space.org>

2005-06-17  Adam Weinberger  <adamw@gnome.org>

	* en_CA.po: Updated Canadian English translation.

2005-06-16  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* da.po: Updated Danish translation.

2005-06-16  Priit Laes  <plaes@cvs.gnome.org>

	* et.po: Translation updated by Ivar Smolin.

2005-06-15  Hendrik Richter  <hendi@gnome-de.org>
